# clinical-trial-recruiter

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: patients.json  trials.json
server/: app.py
src/: __init__.py  env.py  graders.py  models.py  tasks.py
tests/: test_env.py  test_graders.py  test_rewards.py
